--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Создание и продвижение сайтов, интернет-магазинов, лендингов.">
+    <link rel="stylesheet" href="style.css">
+    <title>WebVibeStudio: Профессиональное Создание и Продвижение Сайтов для Вашего Бизнеса</title>
+</head>
+<body>
+	<header>
+    <div class="header-content">
+        <img src="logo.png" alt="Логотип" class="logo">
+        <nav class="menu">
+            <ul>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="about.html">Обо мне</a></li>
+                <li><a href="services.html">Услуги</a></li>
+                <li><a href="portfolio.html">Портфолио</a></li>
+                <li><a href="prices.html">Прайс-лист</a></li>
+                <li><a href="contact.html">Контакты</a></li>
+                <li><a href="en/index.html" class="language-link">English</a></li>
+                <li><a href="de/index.html" class="language-link">Deutsch</a></li>
+                <li><a href="ua/index.html" class="language-link">Українська</a></li>
+            </ul>
+        </nav>
+    </div>
+    </header>
+    <main>
+        <h1>Добро пожаловать на WebVibeStudio</h1>
+        <p>Создание сайтов — это важный шаг для успешного бизнеса. Каждая компания, которая продаёт что-то или оказывает услуги, должна иметь сайт.</p>
+        
+        <h2>Виды сайтов</h2>
+        <p>Существует множество типов сайтов, включая лендинги, корпоративные сайты и интернет-магазины. Правильный выбор типа сайта зависит от целей вашего бизнеса.</p>
 
+        <h2>Продвижение сайтов</h2>
+        <p>Сайтов много, но их нужно продвигать. Продвижение сайта — это набор методов, которые помогут вашему сайту занять высокие позиции в поисковых системах.</p>
+
+        <h2>Оптимизация</h2>
+        <p>Важна как внутренняя, так и внешняя оптимизация. Контент и внешние ссылки играют ключевую роль в успешном продвижении.</p>
+
+        <h2>Этапы создания сайта</h2>
+        <ol>
+            <li>Обсуждение требований клиента.</li>
+            <li>Сбор информации и материалов.</li>
+            <li>Создание прототипа и дизайн.</li>
+            <li>Разработка и тестирование.</li>
+            <li>Запуск и сопровождение.</li>
+        </ol>
+
+        <h2>Как создать свой сайт: пошаговый алгоритм</h2>
+
+        <p>Создание сайта — это увлекательный процесс, который начинается с идеи и завершается полным функционированием. Вот пошаговый алгоритм, как это сделать:</p>
+
+        <h3>1. Определите цель вашего сайта</h3>
+        <p>Прежде чем начать, решите, зачем вам нужен сайт. Это может быть интернет-магазин, блог, портфолио или корпоративный сайт.</p>
+
+        <h3>2. Выберите имя для сайта</h3>
+        <p>Подумайте о запоминающемся и уникальном имени, которое отражает суть вашего бизнеса. Имя должно быть простым для написания и произношения.</p>
+
+        <h3>3. Выберите доменную зону</h3>
+        <p>Определитесь с доменной зоной (.com, .ua, .net и т.д.). Это зависит от вашей целевой аудитории и географической привязки. Для украинских компаний популярна зона .ua.</p>
+
+        <h3>4. Оплатите услуги хостинга и регистрации доменного имени</h3>
+        <p>Выберите надежного провайдера хостинга и оплатите услуги регистрации домена. Это обеспечит доступность вашего сайта в интернете.</p>
+
+        <h3>5. Предоставьте информацию о компании</h3>
+        <p>Соберите все необходимые материалы:</p>
+        <ul>
+           <li>Контактные данные (телефоны, адрес)</li>
+           <li>Фотографии товаров и услуг</li>
+           <li>Описания и цены на товары или услуги</li>
+        </ul>
+
+        <h3>6. Внесите предоплату</h3>
+        <p>После обсуждения всех деталей проекта внесите предоплату, чтобы запустить работу над вашим сайтом.</p>
+
+        <h3>7. Внесите изменения в прототип сайта</h3>
+        <p>Просмотрите прототип сайта и внесите необходимые правки. Обсудите с разработчиком все нюансы, чтобы он мог учесть ваши пожелания.</p>
+
+        <h3>8. Примите работу</h3>
+        <p>После завершения разработки протестируйте сайт и убедитесь, что все работает исправно. Если вас все устраивает, примите работу.</p>
+
+        <h3>9. Обучите персонал, если требуется</h3>
+        <p>При необходимости проведите обучение для вашего персонала по управлению сайтом. Это поможет вашим сотрудникам эффективно использовать его функционал.</p>
+
+        <h3>10. Оплатите остаток за работу</h3>
+        <p>После успешной проверки и принятия работы внесите оставшуюся сумму за услуги.</p>
+
+        <h3>11. Договоритесь о сопровождении сайта</h3>
+        <p>Обсудите условия технической поддержки и сопровождения вашего сайта. Это обеспечит его бесперебойную работу и актуальность информации.</p>
+
+        <p>Инвестируйте в свои будущие доходы, создайте сайт. Звоните и <a href="contact.html">пишите</a> для более детальной информации!</p>		
+    </main>
+    <footer>
+        <p>© 2026 WebVibeStudio. Все права защищены.</p>
+    </footer>
+</body>
+</html>
