--- a/de/index.html
+++ b/de/index.html
@@ -1,1 +1,99 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Erstellung und Förderung von Websites, Online-Shops, Landing Pages.">
+    <link rel="stylesheet" href="style.css">
+    <title>WebVibeStudio: Professionelle Erstellung und Förderung von Websites für Ihr Unternehmen</title>
+</head>
+<body>
+    <header>
+        <div class="header-content">
+            <img src="logo.png" alt="Logo" class="logo">
+            <nav class="menu">
+                <ul>
+                    <li><a href="index.html">Startseite</a></li>
+                    <li><a href="about.html">Über mich</a></li>
+                    <li><a href="services.html">Dienstleistungen</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="prices.html">Preisliste</a></li>
+                    <li><a href="contact.html">Kontakt</a></li>
+                    <li><a href="../en/index.html" class="language-link">English</a></li>
+                    <li><a href="../index.html" class="language-link">Русский</a></li>
+                    <li><a href="../ua/index.html" class="language-link">Українська</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <h1>Willkommen bei Webmaster</h1>
+        <p>Die Erstellung von Websites ist ein wichtiger Schritt für ein erfolgreiches Geschäft. Jedes Unternehmen, das etwas verkauft oder Dienstleistungen anbietet, sollte eine Website haben.</p>
+        
+        <h2>Arten von Websites</h2>
+        <p>Es gibt viele Arten von Websites, darunter Landing Pages, Unternehmenswebsites und Online-Shops. Die richtige Wahl des Website-Typs hängt von den Zielen Ihres Unternehmens ab.</p>
 
+        <h2>Förderung von Websites</h2>
+        <p>Es gibt viele Websites, aber sie müssen gefördert werden. Die Förderung einer Website umfasst Methoden, die Ihrer Website helfen, hohe Positionen in Suchmaschinen zu erreichen.</p>
+
+        <h2>Optimierung</h2>
+        <p>Sowohl interne als auch externe Optimierung sind wichtig. Inhalt und externe Links spielen eine Schlüsselrolle für den Erfolg der Förderung.</p>
+
+        <h2>Phasen der Erstellung einer Website</h2>
+        <ol>
+            <li>Diskussion der Kundenanforderungen.</li>
+            <li>Sammlung von Informationen und Materialien.</li>
+            <li>Erstellung eines Prototyps und Design.</li>
+            <li>Entwicklung und Tests.</li>
+            <li>Start und Unterstützung.</li>
+        </ol>
+
+        <h2>So erstellen Sie Ihre eigene Website: Schritt-für-Schritt-Algorithmus</h2>
+
+        <p>Die Erstellung einer Website ist ein spannender Prozess, der mit einer Idee beginnt und mit einer voll funktionsfähigen Website endet. Hier ist ein Schritt-für-Schritt-Algorithmus, wie Sie es tun können:</p>
+
+        <h3>1. Bestimmen Sie das Ziel Ihrer Website</h3>
+        <p>Bevor Sie beginnen, entscheiden Sie, wofür Sie eine Website benötigen. Es kann ein Online-Shop, ein Blog, ein Portfolio oder eine Unternehmenswebsite sein.</p>
+
+        <h3>2. Wählen Sie einen Namen für die Website</h3>
+        <p>Denken Sie an einen einprägsamen und einzigartigen Namen, der den Kern Ihres Unternehmens widerspiegelt. Der Name sollte einfach zu schreiben und auszusprechen sein.</p>
+
+        <h3>3. Wählen Sie eine Domainzone</h3>
+        <p>Entscheiden Sie sich für eine Domainzone (.com, .de, .net usw.). Dies hängt von Ihrer Zielgruppe und geographischen Zugehörigkeit ab. Für deutsche Unternehmen ist die Zone .de beliebt.</p>
+
+        <h3>4. Bezahlen Sie für Hosting- und Domainregistrierungsdienste</h3>
+        <p>Wählen Sie einen zuverlässigen Hosting-Anbieter und bezahlen Sie die Dienste zur Registrierung der Domain. Dies gewährleistet die Verfügbarkeit Ihrer Website im Internet.</p>
+
+        <h3>5. Stellen Sie Informationen über das Unternehmen bereit</h3>
+        <p>Sammlung aller erforderlichen Materialien:</p>
+        <ul>
+           <li>Kontaktinformationen (Telefonnummern, Adresse)</li>
+           <li>Fotos von Produkten und Dienstleistungen</li>
+           <li>Beschreibungen und Preise für Produkte oder Dienstleistungen</li>
+        </ul>
+
+        <h3>6. Leisten Sie eine Vorauszahlung</h3>
+        <p>Nachdem Sie alle Details des Projekts besprochen haben, leisten Sie eine Vorauszahlung, um die Arbeiten an Ihrer Website zu starten.</p>
+
+        <h3>7. Nehmen Sie Änderungen am Website-Prototyp vor</h3>
+        <p>Überprüfen Sie den Prototyp der Website und nehmen Sie die notwendigen Anpassungen vor. Besprechen Sie alle Nuancen mit dem Entwickler, damit er Ihre Wünsche berücksichtigen kann.</p>
+
+        <h3>8. Nehmen Sie die Arbeit an</h3>
+        <p>Nach Abschluss der Entwicklung testen Sie die Website und stellen Sie sicher, dass alles ordnungsgemäß funktioniert. Wenn alles in Ordnung ist, nehmen Sie die Arbeit an.</p>
+
+        <h3>9. Schulen Sie Ihr Personal, falls erforderlich</h3>
+        <p>Wenn nötig, führen Sie eine Schulung für Ihr Personal zur Verwaltung der Website durch. Dies hilft Ihren Mitarbeitern, ihre Funktionen effektiv zu nutzen.</p>
+
+        <h3>10. Bezahlen Sie den Restbetrag für die Arbeit</h3>
+        <p>Nach erfolgreicher Überprüfung und Annahme der Arbeit leisten Sie die verbleibenden Zahlungen für die Dienste.</p>
+
+        <h3>11. Vereinbaren Sie die Unterstützung der Website</h3>
+        <p>Besprechen Sie die Bedingungen für den technischen Support und die Betreuung Ihrer Website. Dies gewährleistet den reibungslosen Betrieb und die Aktualität der Informationen.</p>
+
+        <p>Investieren Sie in Ihre zukünftigen Einnahmen und erstellen Sie eine Website. Rufen Sie an und <a href="contact.html">schreiben</a> Sie für detailliertere Informationen!</p>		
+    </main>
+    <footer>
+        <p>© 2026 WebVibeStudio. Alle Rechte vorbehalten.</p>
+    </footer>
+</body>
+</html>
