--- a/en/index.html
+++ b/en/index.html
@@ -1,1 +1,99 @@
-e
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Website creation and promotion, online stores, landing pages.">
+    <link rel="stylesheet" href="style.css">
+    <title>WebVibeStudio: Professional Website Creation and Promotion for Your Business</title>
+</head>
+<body>
+    <header>
+        <div class="header-content">
+            <img src="logo.png" alt="Logo" class="logo">
+            <nav class="menu">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="prices.html">Price List</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="../index.html" class="language-link">Русский</a></li>
+                    <li><a href="../de/index.html" class="language-link">Deutsch</a></li>
+                    <li><a href="../ua/index.html" class="language-link">Ukrainian</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <h1>Welcome to Webmaster</h1>
+        <p>Creating websites is an important step for a successful business. Every company that sells something or provides services should have a website.</p>
+        
+        <h2>Types of Websites</h2>
+        <p>There are many types of websites, including landing pages, corporate sites, and online stores. The right choice of website type depends on your business goals.</p>
+
+        <h2>Website Promotion</h2>
+        <p>There are many websites, but they need to be promoted. Website promotion is a set of methods that will help your site rank high in search engines.</p>
+
+        <h2>Optimization</h2>
+        <p>Both internal and external optimization are important. Content and external links play a key role in successful promotion.</p>
+
+        <h2>Stages of Website Creation</h2>
+        <ol>
+            <li>Discussion of client requirements.</li>
+            <li>Gathering information and materials.</li>
+            <li>Creating a prototype and design.</li>
+            <li>Development and testing.</li>
+            <li>Launch and support.</li>
+        </ol>
+
+        <h2>How to Create Your Website: Step-by-Step Algorithm</h2>
+
+        <p>Creating a website is an exciting process that starts with an idea and ends with full functionality. Here’s a step-by-step algorithm on how to do it:</p>
+
+        <h3>1. Define the purpose of your website</h3>
+        <p>Before you start, decide why you need a website. It could be an online store, blog, portfolio, or corporate site.</p>
+
+        <h3>2. Choose a name for the website</h3>
+        <p>Think of a memorable and unique name that reflects the essence of your business. The name should be easy to spell and pronounce.</p>
+
+        <h3>3. Choose a domain zone</h3>
+        <p>Decide on a domain zone (.com, .ua, .net, etc.). This depends on your target audience and geographic location. For Ukrainian companies, the .ua zone is popular.</p>
+
+        <h3>4. Pay for hosting services and domain registration</h3>
+        <p>Choose a reliable hosting provider and pay for domain registration services. This will ensure your website is accessible on the internet.</p>
+
+        <h3>5. Provide company information</h3>
+        <p>Gather all necessary materials:</p>
+        <ul>
+           <li>Contact details (phone numbers, address)</li>
+           <li>Photos of products and services</li>
+           <li>Descriptions and prices of products or services</li>
+        </ul>
+
+        <h3>6. Make an advance payment</h3>
+        <p>After discussing all project details, make an advance payment to start work on your website.</p>
+
+        <h3>7. Make changes to the website prototype</h3>
+        <p>Review the website prototype and make necessary edits. Discuss all details with the developer so they can consider your wishes.</p>
+
+        <h3>8. Accept the work</h3>
+        <p>After the development is completed, test the website and ensure everything is working properly. If you are satisfied, accept the work.</p>
+
+        <h3>9. Train staff if necessary</h3>
+        <p>If needed, conduct training for your staff on how to manage the website. This will help your employees effectively use its functionality.</p>
+
+        <h3>10. Pay the remaining balance for the work</h3>
+        <p>After successful review and acceptance of the work, pay the remaining amount for the services.</p>
+
+        <h3>11. Agree on website support</h3>
+        <p>Discuss the terms of technical support and maintenance for your website. This will ensure its smooth operation and up-to-date information.</p>
+
+        <p>Invest in your future earnings by creating a website. Call and <a href="contact.html">write</a> for more detailed information!</p>		
+    </main>
+    <footer>
+        <p>© 2026 WebVibeStudio. All rights reserved.</p>
+    </footer>
+</body>
+</html>
