--- a/ua/index.html
+++ b/ua/index.html
@@ -1,1 +1,99 @@
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Створення та просування сайтів, інтернет-магазинів, лендингів.">
+    <link rel="stylesheet" href="style.css">
+    <title>WebVibeStudio: Професійне Створення та Просування Сайтів для Вашого Бізнесу</title>
+</head>
+<body>
+    <header>
+        <div class="header-content">
+            <img src="logo.png" alt="Логотип" class="logo">
+            <nav class="menu">
+                <ul>
+                    <li><a href="index.html">Головна</a></li>
+                    <li><a href="about.html">Про мене</a></li>
+                    <li><a href="services.html">Послуги</a></li>
+                    <li><a href="portfolio.html">Портфоліо</a></li>
+                    <li><a href="prices.html">Прайс-лист</a></li>
+                    <li><a href="contact.html">Контакти</a></li>
+                    <li><a href="../en/index.html" class="language-link">English</a></li>
+                    <li><a href="../de/index.html" class="language-link">Deutsch</a></li>
+                    <li><a href="../index.html" class="language-link">Русский</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <h1>Ласкаво просимо на Webmaster</h1>
+        <p>Створення сайтів — це важливий крок для успішного бізнесу. Кожна компанія, яка продає щось або надає послуги, повинна мати сайт.</p>
+        
+        <h2>Види сайтів</h2>
+        <p>Існує безліч типів сайтів, включаючи лендинги, корпоративні сайти та інтернет-магазини. Правильний вибір типу сайту залежить від цілей вашого бізнесу.</p>
 
+        <h2>Просування сайтів</h2>
+        <p>Сайтів багато, але їх потрібно просувати. Просування сайту — це набір методів, які допоможуть вашому сайту зайняти високі позиції в пошукових системах.</p>
+
+        <h2>Оптимізація</h2>
+        <p>Важлива як внутрішня, так і зовнішня оптимізація. Контент і зовнішні посилання відіграють ключову роль в успішному просуванні.</p>
+
+        <h2>Етапи створення сайту</h2>
+        <ol>
+            <li>Обговорення вимог клієнта.</li>
+            <li>Збір інформації та матеріалів.</li>
+            <li>Створення прототипу та дизайну.</li>
+            <li>Розробка та тестування.</li>
+            <li>Запуск і супровід.</li>
+        </ol>
+
+        <h2>Як створити свій сайт: покроковий алгоритм</h2>
+
+        <p>Створення сайту — це захоплюючий процес, який починається з ідеї і завершується повним функціонуванням. Ось покроковий алгоритм, як це зробити:</p>
+
+        <h3>1. Визначте мету вашого сайту</h3>
+        <p>Перш ніж почати, виріште, навіщо вам потрібен сайт. Це може бути інтернет-магазин, блог, портфоліо або корпоративний сайт.</p>
+
+        <h3>2. Виберіть ім'я для сайту</h3>
+        <p>Подумайте про запам'ятовуюче та унікальне ім'я, яке відображає суть вашого бізнесу. Ім'я повинно бути простим для написання і вимови.</p>
+
+        <h3>3. Виберіть доменну зону</h3>
+        <p>Визначтеся з доменною зоною (.com, .ua, .net тощо). Це залежить від вашої цільової аудиторії та географічної прив'язки. Для українських компаній популярна зона .ua.</p>
+
+        <h3>4. Оплатіть послуги хостингу та реєстрації доменного імені</h3>
+        <p>Виберіть надійного провайдера хостингу та оплатіть послуги реєстрації домена. Це забезпечить доступність вашого сайту в інтернеті.</p>
+
+        <h3>5. Надайте інформацію про компанію</h3>
+        <p>Зберіть усі необхідні матеріали:</p>
+        <ul>
+           <li>Контактні дані (телефони, адреса)</li>
+           <li>Фотографії товарів і послуг</li>
+           <li>Опис та ціни на товари або послуги</li>
+        </ul>
+
+        <h3>6. Внесіть передоплату</h3>
+        <p>Після обговорення всіх деталей проекту внесіть передоплату, щоб розпочати роботу над вашим сайтом.</p>
+
+        <h3>7. Внесіть зміни в прототип сайту</h3>
+        <p>Перегляньте прототип сайту і внесіть необхідні правки. Обговоріть з розробником усі нюанси, щоб він міг врахувати ваші побажання.</p>
+
+        <h3>8. Прийміть роботу</h3>
+        <p>Після завершення розробки протестуйте сайт і переконайтеся, що все працює справно. Якщо вас все влаштовує, прийміть роботу.</p>
+
+        <h3>9. Навчіть персонал, якщо потрібно</h3>
+        <p>За потреби проведіть навчання для вашого персоналу з управління сайтом. Це допоможе вашим співробітникам ефективно використовувати його функціонал.</p>
+
+        <h3>10. Оплатіть залишок за роботу</h3>
+        <p>Після успішної перевірки та прийняття роботи внесіть залишкову суму за послуги.</p>
+
+        <h3>11. Узгодьте супровід сайту</h3>
+        <p>Обговоріть умови технічної підтримки та супроводу вашого сайту. Це забезпечить його безперебійну роботу та актуальність інформації.</p>
+
+        <p>Інвестуйте у свої майбутні доходи, створіть сайт. Телефонуйте та <a href="contact.html">пишіть</a> для більш детальної інформації!</p>		
+    </main>
+    <footer>
+        <p>© 2026 WebVibeStudio. Усі права захищені.</p>
+    </footer>
+</body>
+</html>
